update the css animation functionality

--- a/Week-2/animation/index.html
+++ b/Week-2/animation/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <section class="outerBox">
-        <div class="box1" id="column1"></div>
-        <div class="box2"id="column2"></div>
-        <div class="box3" id="column1"></div>
-        <div class="box4" id="column2"></div>
+        <div class="box1" id="column"></div>
+        <div class="box2"id="column"></div>
+        <div class="box3" id="column"></div>
+        <div class="box4" id="column"></div>
         <div class="text">Hi!</div>
     </section>  
 </body>
