--- a/Week-2/animation/index.html
+++ b/Week-2/animation/index.html
@@ -8,11 +8,11 @@
     <title>Animation</title>
 </head>
 <body>
-    <section class="outerBox">
-        <div class="box1" id="column"></div>
-        <div class="box2"id="column"></div>
-        <div class="box3" id="column"></div>
-        <div class="box4" id="column"></div>
+    <section class="outerBox" id="outerBoxId">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
         <div class="text">Hi!</div>
     </section>  
 </body>
